# Sybil-Swarm

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  chat.py  simulation.py
backend/app/routes/: chat.py  reports.py  simulations.py
backend/app/schemas/: simulation.py
backend/app/services/: aggregator.py  chat_service.py  input_parser.py  llm_client.py  persona_generator.py  prompts.py  report_generator.py  simulation_engine.py
backend/plans/reports/: code-reviewer-260315-phase01-02-backend.md  docs-manager-260315-initial-documentation.md
backend/tests/: test_health.py
docker/: docker-compose.yml
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: agent-feed.tsx  chat-panel.tsx  conversion-funnel.tsx  phase-indicator.tsx  report-view.tsx  sentiment-heatmap.tsx  simulation-world.tsx  stats-panel.tsx
frontend/src/lib/: api-client.ts  types.ts  use-sse.ts  use-websocket.ts
plans/260315-bootstrap-sybil-swarm/: phase-01-project-scaffold.md  phase-02-backend-core.md  phase-03-frontend-dashboard.md  phase-04-agent-chat-reports.md  phase-05-readme-launch-prep.md  phase-06-polish-testing-docker.md  plan.md
plans/260315-bootstrap-sybil-swarm/research/: researcher-01-multi-agent-frameworks.md  (+1 more)
plans/reports/: researcher-260315-mirofish-analysis.md
(+1 files in other folders)
